--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,34 +115,28 @@ LastLevel=/Game/Maps/CharacterTest
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Mesh/Characters/protag/m_protag_01_PhysicsAsset.m_protag_01_PhysicsAsset
-OpenAssetsAtExit=/Game/Mesh/Characters/protag/m_protag_01.m_protag_01
-OpenAssetsAtExit=/Game/Mesh/Characters/protag/m_protag_01_Skeleton.m_protag_01_Skeleton
-OpenAssetsAtExit=/Game/Mesh/Characters/Bonnie/skel_bonnie.skel_bonnie
-OpenAssetsAtExit=/Game/Mesh/Characters/Bonnie/m_bonnie.m_bonnie
-OpenAssetsAtExit=/Game/a_protag_idle.a_protag_idle
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/CharacterTest
-MRUItem1=/Game/a_protag_runF
-MRUItem2=/Game/a_protag_idle
-MRUItem3=/Game/Mesh/Characters/Bonnie/m_bonnie
-MRUItem4=/Game/Mesh/Characters/Bonnie/skel_bonnie
-MRUItem5=/Game/Mesh/Characters/protag/m_protag_01_Skeleton
-MRUItem6=/Game/Mesh/Characters/protag/m_protag_01
-MRUItem7=/Game/Mesh/Characters/protag/m_protag_01_PhysicsAsset
-MRUItem8=/Game/Mesh/Characters/protag/m_protag_wSkirt
-MRUItem9=/Game/Anims/Bonnie/abp_bonnie
-MRUItem10=/Game/Maps/BlockOut
-MRUItem11=/Game/UI/W_inGameHud
-MRUItem12=/Game/Blueprints/CharacterBP/curve_finisher
-MRUItem13=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem14=/Game/Anims/Player/mon_player_dashFInisher
-MRUItem15=/Game/Anims/Bonnie/Char/mon_bonnie_finisherDash
-MRUItem16=/Game/Anims/Bonnie/Char/mon_bonnie_dashF
-MRUItem17=/Game/Anims/Bonnie/Char/a_bonnie_dashF_act
-MRUItem18=/Game/Anims/Bonnie/Char/a_bonnie_dashF_end
-MRUItem19=/Game/Anims/Bonnie/Char/a_bonnie_dashF_str
+MRUItem0=/Game/Anims/protag/m_protag_01_Skeleton_BlendSpace
+MRUItem1=/Game/bonniea_bonnie_runBprotag
+MRUItem2=/Game/Blueprints/Data/Data_Bonnie_hitValues
+MRUItem3=/Game/Blueprints/CharacterBP/bp_baseChar
+MRUItem4=/Game/bonnieabp_bonnieprotag
+MRUItem5=/Game/Anims/Bonnie/bs_Bonnie_idleWalkRun
+MRUItem6=/Game/Maps/CharacterTest
+MRUItem7=/Game/Mesh/Characters/protag/a_protag_runR
+MRUItem8=/Game/Mesh/Characters/protag/m_protag
+MRUItem9=/Game/Mesh/Characters/protag/a_protag_runL
+MRUItem10=/Game/Mesh/Characters/protag/a_protag_runF
+MRUItem11=/Game/Mesh/Characters/protag/m_protag_01
+MRUItem12=/Game/a_protag_runF
+MRUItem13=/Game/a_protag_idle
+MRUItem14=/Game/Mesh/Characters/Bonnie/m_bonnie
+MRUItem15=/Game/Mesh/Characters/Bonnie/skel_bonnie
+MRUItem16=/Game/Mesh/Characters/protag/m_protag_01_Skeleton
+MRUItem17=/Game/Mesh/Characters/protag/m_protag_01_PhysicsAsset
+MRUItem18=/Game/Mesh/Characters/protag/m_protag_wSkirt
+MRUItem19=/Game/Anims/Bonnie/abp_bonnie
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2885,9 +2879,82 @@ PhysicsAssetGenerationSettings.Constraint Creation=True
 SkeletalBodySetup.Physics=True
 SkeletalBodySetup.Collision=True
 SkeletalBodySetup.BodySetup=True
+bonnieabp_bonnieprotag_C.Default=True
+bonnieabp_bonnieprotag_C.RootMotion=True
+REINST_bp_baseEnemy_C_102.TransformCommon=True
+REINST_bp_baseEnemy_C_102.Animation=True
+REINST_bp_baseEnemy_C_102.Mesh=True
+REINST_bp_baseEnemy_C_102.None=True
+REINST_bp_baseEnemy_C_102.Physics=True
+REINST_bp_baseEnemy_C_102.Clothing=True
+REINST_bp_baseEnemy_C_102.Collision=True
+REINST_bp_baseEnemy_C_102.Lighting=True
+REINST_bp_baseEnemy_C_102.ClothingSimulation=True
+REINST_bp_baseEnemy_C_102.Rendering=True
+REINST_bp_baseEnemy_C_102.Tags=True
+REINST_bp_baseEnemy_C_102.Activation=True
+REINST_bp_baseEnemy_C_102.Cooking=True
+REINST_bp_baseEnemy_C_102.Character Movement: Jumping / Falling=True
+REINST_bp_baseEnemy_C_102.Character Movement (General Settings)=True
+REINST_bp_baseEnemy_C_102.Character Movement: Walking=True
+REINST_bp_baseEnemy_C_102.Character Movement: Swimming=True
+REINST_bp_baseEnemy_C_102.Character Movement: Flying=True
+REINST_bp_baseEnemy_C_102.Character Movement: Custom Movement=True
+REINST_bp_baseEnemy_C_102.Character Movement (Rotation Settings)=True
+REINST_bp_baseEnemy_C_102.Character Movement: Physics Interaction=True
+REINST_bp_baseEnemy_C_102.Character Movement (Networking)=True
+REINST_bp_baseEnemy_C_102.Character Movement=True
+REINST_bp_baseEnemy_C_102.Character Movement: Avoidance=True
+REINST_bp_baseEnemy_C_102.Character Movement: NavMesh Movement=True
+REINST_bp_baseEnemy_C_102.RootMotion=True
+REINST_bp_baseEnemy_C_102.NavMovement=True
+REINST_bp_baseEnemy_C_102.Velocity=True
+REINST_bp_baseEnemy_C_102.PlanarMovement=True
+REINST_bp_baseEnemy_C_102.MovementComponent=True
+REINST_bp_baseEnemy_C_102.Shape=True
+REINST_bp_baseEnemy_C_102.Navigation=True
+REINST_bp_baseEnemy_C_102.Character=True
+REINST_bp_baseEnemy_C_102.Camera=True
+REINST_bp_baseEnemy_C_102.Pawn=True
+REINST_bp_baseEnemy_C_102.Input=True
+REINST_bp_baseEnemy_C_102.Actor=True
+REINST_bp_baseChar_C_101.Variable=True
+REINST_bp_baseChar_C_101.TransformCommon=True
+REINST_bp_baseChar_C_101.Sockets=True
+REINST_bp_baseChar_C_101.Animation=True
+REINST_bp_baseChar_C_101.Mesh=True
+REINST_bp_baseChar_C_101.Materials=True
+REINST_bp_baseChar_C_101.Clothing=True
+REINST_bp_baseChar_C_101.ClothingSimulation=True
+REINST_bp_baseChar_C_101.Physics=True
+REINST_bp_baseChar_C_101.Collision=True
+REINST_bp_baseChar_C_101.Lighting=True
+REINST_bp_baseChar_C_101.Rendering=True
+REINST_bp_baseChar_C_101.Tags=True
+REINST_bp_baseChar_C_101.ComponentReplication=True
+REINST_bp_baseChar_C_101.Activation=True
+REINST_bp_baseChar_C_101.Cooking=True
+REINST_bp_baseChar_C_101.Events=True
+REINST_bp_baseChar_C_145.Variable=True
+REINST_bp_baseChar_C_145.TransformCommon=True
+REINST_bp_baseChar_C_145.Sockets=True
+REINST_bp_baseChar_C_145.Animation=True
+REINST_bp_baseChar_C_145.Mesh=True
+REINST_bp_baseChar_C_145.Materials=True
+REINST_bp_baseChar_C_145.Clothing=True
+REINST_bp_baseChar_C_145.ClothingSimulation=True
+REINST_bp_baseChar_C_145.Physics=True
+REINST_bp_baseChar_C_145.Collision=True
+REINST_bp_baseChar_C_145.Lighting=True
+REINST_bp_baseChar_C_145.Rendering=True
+REINST_bp_baseChar_C_145.Tags=True
+REINST_bp_baseChar_C_145.ComponentReplication=True
+REINST_bp_baseChar_C_145.Activation=True
+REINST_bp_baseChar_C_145.Cooking=True
+REINST_bp_baseChar_C_145.Events=True
 
 [RootWindow]
-ScreenPosition=X=34.000 Y=595.000
+ScreenPosition=X=473.000 Y=299.000
 WindowSize=X=1910.000 Y=1070.000
 InitiallyMaximized=True
 
@@ -2915,7 +2982,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Anims/protag
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3875,6 +3942,9 @@ SkeletalMesh=SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.LOD0.Skeletal
 /Game/Anims/Bonnie/Char/mon_bonnie_finisher.mon_bonnie_finisher=1
 /Game/Mesh/Characters/Bonnie/m_bonnie.m_bonnie=1
 /Game/Mesh/Characters/protag/m_protag_wSkirt.m_protag_wSkirt=1
+/Game/Anims/Bonnie/bs_Bonnie_idleWalkRun.bs_bonnie_idleWalkRun=1
+/Game/Anims/protag/m_protag_01_Skeleton_BlendSpace.m_protag_01_Skeleton_BlendSpace=1
+/Game/bonniea_bonnie_runBprotag.bonniea_bonnie_runBprotag=1
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -3884,8 +3954,8 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
 bp_baseCharacter_C="\"Object.DataTableInfo\" \"Object.DataTableInfo.DataTableInfo[12]\" \"Object.DataTableInfo.DataTableInfo[13]\" \"Object.DataTableInfo\" \"Object.DataTableInfo.DataTableInfo[12]\" \"Object.DataTableInfo.DataTableInfo[13]\" "
-Character=
-Pawn=
+Character="\"Object.animations.animations_movement\" \"Object.animations.animations_dash\" \"Object.animations.DataTable_Attacks\" \"Object.animations.DataTable_Attacks.DataTable_Attacks[13]\" \"Object.animations.animations_auxWeapon\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+Pawn="\"Object.animations.animations_movement\" \"Object.animations.animations_dash\" \"Object.animations.DataTable_Attacks\" \"Object.animations.DataTable_Attacks.DataTable_Attacks[13]\" \"Object.animations.animations_auxWeapon\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C=
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -4027,7 +4097,7 @@ abp_bonnie_C=
 test_C=
 abp_gauntlets_C=
 SkinnedMeshComponent="\"Object.SkeletalMesh\" "
-bp_baseChar_C=
+bp_baseChar_C="\"Object.animations.animations_movement\" \"Object.animations.animations_dash\" \"Object.animations.DataTable_Attacks\" \"Object.animations.DataTable_Attacks.DataTable_Attacks[13]\" \"Object.animations.animations_auxWeapon\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 SkeletalMeshComponent="\"Object.SkeletalMesh\" "
 BoxComponent=
 REINST_bp_baseChar_C_108="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
@@ -4084,6 +4154,9 @@ ClothingAsset="\"Object.Config.ClothConfig\" \"Object.Config.ClothConfig.Vertica
 ClothingAssetBase="\"Object.Config.ClothConfig\" \"Object.Config.ClothConfig.VerticalConstraintConfig\" "
 SkeletalBodySetup="\"Object.AggGeom\" \"Object.AggGeom.SphylElems\" \"Object.AggGeom.SphylElems.SphylElems[0]\" "
 BodySetup="\"Object.AggGeom\" \"Object.AggGeom.SphylElems\" \"Object.AggGeom.SphylElems.SphylElems[0]\" "
+REINST_bp_baseEnemy_C_102="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+REINST_bp_baseChar_C_101="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+REINST_bp_baseChar_C_145="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
