--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,39 +104,40 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/BlockOut
-MRUItem1=/Game/Maps/CharacterTest
-MRUItem2=/Game/Maps/TempleBlockOut
-MRUItem3=/Game/Maps/MainMenu
-MRUItem4=/Game/Maps/mateneeTest
+MRUItem0=/Game/Maps/BlockOutExport
+MRUItem1=/Game/Maps/BlockOut
+MRUItem2=/Game/Maps/CharacterTest
+MRUItem3=/Game/Maps/TempleBlockOut
+MRUItem4=/Game/Maps/MainMenu
+MRUItem5=/Game/Maps/mateneeTest
 
 [EditorStartup]
-LastLevel=/Game/Maps/BlockOut
+LastLevel=/Game/Maps/BlockOutExport
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/BlockOut
-MRUItem1=/Game/Anims/protag/a_protag_idle
-MRUItem2=/Game/Anims/protag/m_protag_01_Skeleton_BlendSpace
-MRUItem3=/Game/bonniea_bonnie_runBprotag
-MRUItem4=/Game/Blueprints/Data/Data_Bonnie_hitValues
-MRUItem5=/Game/Blueprints/CharacterBP/bp_baseChar
-MRUItem6=/Game/bonnieabp_bonnieprotag
-MRUItem7=/Game/Anims/Bonnie/bs_Bonnie_idleWalkRun
-MRUItem8=/Game/Maps/CharacterTest
-MRUItem9=/Game/Mesh/Characters/protag/a_protag_runR
-MRUItem10=/Game/Mesh/Characters/protag/m_protag
-MRUItem11=/Game/Mesh/Characters/protag/a_protag_runL
-MRUItem12=/Game/Mesh/Characters/protag/a_protag_runF
-MRUItem13=/Game/Mesh/Characters/protag/m_protag_01
-MRUItem14=/Game/a_protag_runF
-MRUItem15=/Game/a_protag_idle
-MRUItem16=/Game/Mesh/Characters/Bonnie/m_bonnie
-MRUItem17=/Game/Mesh/Characters/Bonnie/skel_bonnie
-MRUItem18=/Game/Mesh/Characters/protag/m_protag_01_Skeleton
-MRUItem19=/Game/Mesh/Characters/protag/m_protag_01_PhysicsAsset
+MRUItem0=/Game/Materials/TestMat
+MRUItem1=/Game/Materials/Brickmaster
+MRUItem2=/Game/Maps/BlockOutExport
+MRUItem3=/Game/Maps/BlockOut
+MRUItem4=/Game/Anims/protag/a_protag_idle
+MRUItem5=/Game/Anims/protag/m_protag_01_Skeleton_BlendSpace
+MRUItem6=/Game/bonniea_bonnie_runBprotag
+MRUItem7=/Game/Blueprints/Data/Data_Bonnie_hitValues
+MRUItem8=/Game/Blueprints/CharacterBP/bp_baseChar
+MRUItem9=/Game/bonnieabp_bonnieprotag
+MRUItem10=/Game/Anims/Bonnie/bs_Bonnie_idleWalkRun
+MRUItem11=/Game/Maps/CharacterTest
+MRUItem12=/Game/Mesh/Characters/protag/a_protag_runR
+MRUItem13=/Game/Mesh/Characters/protag/m_protag
+MRUItem14=/Game/Mesh/Characters/protag/a_protag_runL
+MRUItem15=/Game/Mesh/Characters/protag/a_protag_runF
+MRUItem16=/Game/Mesh/Characters/protag/m_protag_01
+MRUItem17=/Game/a_protag_runF
+MRUItem18=/Game/a_protag_idle
+MRUItem19=/Game/Mesh/Characters/Bonnie/m_bonnie
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2952,9 +2953,10 @@ REINST_bp_baseChar_C_145.ComponentReplication=True
 REINST_bp_baseChar_C_145.Activation=True
 REINST_bp_baseChar_C_145.Cooking=True
 REINST_bp_baseChar_C_145.Events=True
+FbxImportUI.LodSettings=True
 
 [RootWindow]
-ScreenPosition=X=-35.000 Y=276.000
+ScreenPosition=X=0.000 Y=0.000
 WindowSize=X=1910.000 Y=1070.000
 InitiallyMaximized=False
 
@@ -3019,7 +3021,7 @@ UNR=../../../../../projects/lightb/LightBringerAlpha/Content/Maps
 BRUSH=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBX=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBXAnim=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
-GenericImport=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
+GenericImport=../../../../../projects/lightb/environ/Dome/Domeexport.obj
 GenericExport=C:/Users/Chris Justo/Documents/New folder (2)
 GenericOpen=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 GenericSave=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
@@ -3669,7 +3671,7 @@ Cascade.TimeStamp=2018.10.07-02.07.52
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2018.10.07-02.07.58
 DistCurveEditor.LastCompileMethod=Unknown
-MeshBuilder.TimeStamp=2019.03.18-07.52.57
+MeshBuilder.TimeStamp=2019.09.06-02.30.05
 MeshBuilder.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2018.10.07-02.08.30
 StaticMeshEditor.LastCompileMethod=Unknown
@@ -3946,9 +3948,11 @@ SkeletalMesh=SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.LOD0.Skeletal
 /Game/Anims/protag/m_protag_01_Skeleton_BlendSpace.m_protag_01_Skeleton_BlendSpace=1
 /Game/bonniea_bonnie_runBprotag.bonniea_bonnie_runBprotag=1
 /Game/Anims/protag/a_protag_idle.a_protag_idle=1
+/Game/Materials/Brickmaster.Brickmaster=1
+/Game/Materials/TestMat.TestMat=1
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -4198,6 +4202,8 @@ bp_baseChar_C.Character Movement (General Settings)=True
 SkeletalMesh.LODCustomMode=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/TestMat.TestMat;
+RecentlyPlaced=/Game/Mesh/Domeexport.Domeexport;
 RecentlyPlaced=/Game/a_protag_hitStun.a_protag_hitStun;
 RecentlyPlaced=/Game/a_protag_idle.a_protag_idle;
 RecentlyPlaced=/Game/Mesh/Characters/protag/m_protag_wSkirt.m_protag_wSkirt;
@@ -4216,8 +4222,6 @@ RecentlyPlaced=/Game/Mesh/Characters/Bonnie/m_gauntlets.m_gauntlets;
 RecentlyPlaced=/Game/Mesh/Characters/Bonnie/m_bonnie.m_bonnie;
 RecentlyPlaced=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter;
 RecentlyPlaced=/Game/Blueprints/AI/transitionPoint.transitionPoint;
-RecentlyPlaced=/Script/CinematicCamera.CameraRig_Rail;
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -4349,6 +4353,8 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportMaterials=False
+bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -4364,8 +4370,8 @@ bImportMeshLODs=False
 NormalImportMethod=FBXNIM_ImportNormals
 NormalGenerationMethod=MikkTSpace
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
-ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
-ImportUniformScale=1.000000
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=90.000000)
+ImportUniformScale=1000.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
