--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -118,26 +118,26 @@ LastLevel=/Game/Maps/BlockOutExport
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/TestMat
-MRUItem1=/Game/Materials/Brickmaster
-MRUItem2=/Game/Maps/BlockOutExport
-MRUItem3=/Game/Maps/BlockOut
-MRUItem4=/Game/Anims/protag/a_protag_idle
-MRUItem5=/Game/Anims/protag/m_protag_01_Skeleton_BlendSpace
-MRUItem6=/Game/bonniea_bonnie_runBprotag
-MRUItem7=/Game/Blueprints/Data/Data_Bonnie_hitValues
-MRUItem8=/Game/Blueprints/CharacterBP/bp_baseChar
-MRUItem9=/Game/bonnieabp_bonnieprotag
-MRUItem10=/Game/Anims/Bonnie/bs_Bonnie_idleWalkRun
-MRUItem11=/Game/Maps/CharacterTest
-MRUItem12=/Game/Mesh/Characters/protag/a_protag_runR
-MRUItem13=/Game/Mesh/Characters/protag/m_protag
-MRUItem14=/Game/Mesh/Characters/protag/a_protag_runL
-MRUItem15=/Game/Mesh/Characters/protag/a_protag_runF
-MRUItem16=/Game/Mesh/Characters/protag/m_protag_01
-MRUItem17=/Game/a_protag_runF
-MRUItem18=/Game/a_protag_idle
-MRUItem19=/Game/Mesh/Characters/Bonnie/m_bonnie
+MRUItem0=/Game/Materials/Brickmaster
+MRUItem1=/Game/Materials/masters/MasterMat2
+MRUItem2=/Game/Materials/masters/MasterMat1
+MRUItem3=/Game/Materials/masters/TrueTesselation
+MRUItem4=/Game/Materials/masters/BumpOffset
+MRUItem5=/Game/Materials/Parallax_Inst
+MRUItem6=/Game/Materials/masters/Parallax
+MRUItem7=/Game/Maps/BlockOutExport
+MRUItem8=/Game/Materials/TestMat
+MRUItem9=/Game/Maps/BlockOut
+MRUItem10=/Game/Anims/protag/a_protag_idle
+MRUItem11=/Game/Anims/protag/m_protag_01_Skeleton_BlendSpace
+MRUItem12=/Game/bonniea_bonnie_runBprotag
+MRUItem13=/Game/Blueprints/Data/Data_Bonnie_hitValues
+MRUItem14=/Game/Blueprints/CharacterBP/bp_baseChar
+MRUItem15=/Game/bonnieabp_bonnieprotag
+MRUItem16=/Game/Anims/Bonnie/bs_Bonnie_idleWalkRun
+MRUItem17=/Game/Maps/CharacterTest
+MRUItem18=/Game/Mesh/Characters/protag/a_protag_runR
+MRUItem19=/Game/Mesh/Characters/protag/m_protag
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2984,7 +2984,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Materials/MatInstances
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3021,7 +3021,7 @@ UNR=../../../../../projects/lightb/LightBringerAlpha/Content/Maps
 BRUSH=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBX=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBXAnim=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
-GenericImport=../../../../../projects/lightb/environ/Dome/Domeexport.obj
+GenericImport=../../../../../projects/lightb/environ/Dome/test/Domeexport_Height.Box_Brush12_StaticMeshSG.png
 GenericExport=C:/Users/Chris Justo/Documents/New folder (2)
 GenericOpen=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 GenericSave=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
@@ -3629,8 +3629,8 @@ FoliageEdit.TimeStamp=2019.09.06-02.30.03
 FoliageEdit.LastCompileMethod=External
 StatsViewer.TimeStamp=2019.09.06-02.30.07
 StatsViewer.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2018.10.07-02.08.07
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2019.09.06-02.30.03
+HierarchicalLODUtilities.LastCompileMethod=External
 CollectionManager.TimeStamp=2019.09.06-02.30.01
 CollectionManager.LastCompileMethod=External
 EditorWidgets.TimeStamp=2019.09.06-02.30.02
@@ -3776,14 +3776,14 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.LockOn,InputSettings.Bindings.ActionMappings.LightAttack,InputSettings.Bindings.ActionMappings.PickupItem,InputSettings.Bindings.ActionMappings.HeavyAttack,InputSettings.Bindings.ActionMappings.Gaurd,InputSettings.Bindings.ActionMappings.Heal,InputSettings.Bindings.ActionMappings.BlockBreaker,InputSettings.Bindings.ActionMappings.Float,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Pause,
 BoolProperty=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,bp_baseChar_C.Rendering.TextureStreaming,bp_baseChar_C.Rendering.LOD,bp_baseChar_C.Collision.Collision,bp_baseEnemy_C.Collision.Collision,bp_baseChar_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Collision.Collision,
 bp_fistAI_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Main,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Textures,MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,bp_baseChar_C.Rendering.TextureStreaming,bp_baseChar_C.Rendering.LOD,bp_baseChar_C.Collision.Collision,bp_baseEnemy_C.Collision.Collision,bp_baseChar_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Collision.Collision,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 MainMenu_C=K2Node_VariableGet.DefaultValueCategory.None,
 ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,bp_baseChar_C.Rendering.TextureStreaming,bp_baseChar_C.Rendering.LOD,bp_baseChar_C.Collision.Collision,bp_baseEnemy_C.Collision.Collision,bp_baseChar_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Collision.Collision,CameraComponent.Lens.Lens,
 LoadingScreen_UI_C=K2Node_VariableGet.DefaultValueCategory.None,
 PostProcessVolume=PostProcessVolume.Lens.Lens,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Main,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Textures,MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,
 ByteProperty=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,bp_baseChar_C.Rendering.TextureStreaming,bp_baseChar_C.Rendering.LOD,bp_baseChar_C.Collision.Collision,bp_baseEnemy_C.Collision.Collision,bp_baseChar_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Collision.Collision,
 ArrayProperty=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,bp_baseChar_C.Rendering.TextureStreaming,bp_baseChar_C.Rendering.LOD,bp_baseChar_C.Collision.Collision,bp_baseEnemy_C.Collision.Collision,bp_baseChar_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Collision.Collision,
 PauseMenu_UI_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
@@ -3950,6 +3950,12 @@ SkeletalMesh=SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.LOD0.Skeletal
 /Game/Anims/protag/a_protag_idle.a_protag_idle=1
 /Game/Materials/Brickmaster.Brickmaster=1
 /Game/Materials/TestMat.TestMat=1
+/Game/Materials/masters/Parallax.Parallax=1
+/Game/Materials/Parallax_Inst.Parallax_Inst=1
+/Game/Materials/masters/BumpOffset.BumpOffset=1
+/Game/Materials/masters/MasterMat1.MasterMat1=1
+/Game/Materials/masters/TrueTesselation.TrueTesselation=1
+/Game/Materials/masters/MasterMat2.MasterMat2=1
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -4202,6 +4208,9 @@ bp_baseChar_C.Character Movement (General Settings)=True
 SkeletalMesh.LODCustomMode=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/MatInstances/MasterMat1_Inst.MasterMat1_Inst;
+RecentlyPlaced=/Game/Materials/BumpOffset_Inst.BumpOffset_Inst;
+RecentlyPlaced=/Game/Materials/Parallax_Inst.Parallax_Inst;
 RecentlyPlaced=/Game/Materials/TestMat.TestMat;
 RecentlyPlaced=/Game/Mesh/Domeexport.Domeexport;
 RecentlyPlaced=/Game/a_protag_hitStun.a_protag_hitStun;
@@ -4219,9 +4228,6 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 RecentlyPlaced=/Game/Anims/Bonnie/test.test;
 RecentlyPlaced=/Game/Mesh/Characters/Bonnie/m_giantGauntlets.m_giantGauntlets;
 RecentlyPlaced=/Game/Mesh/Characters/Bonnie/m_gauntlets.m_gauntlets;
-RecentlyPlaced=/Game/Mesh/Characters/Bonnie/m_bonnie.m_bonnie;
-RecentlyPlaced=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter;
-RecentlyPlaced=/Game/Blueprints/AI/transitionPoint.transitionPoint;
 
 [MaterialInstanceEditor]
 bShowGrid=False
