--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,40 +104,41 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/BlockOut
-MRUItem1=/Game/Maps/TempleBlockOut
-MRUItem2=/Game/Maps/BlockOutExport
+MRUItem0=/Game/Maps/BlockOutExport
+MRUItem1=/Game/Maps/BlockOut
+MRUItem2=/Game/Maps/TempleBlockOut
 MRUItem3=/Game/Maps/CharacterTest
 MRUItem4=/Game/Maps/MainMenu
 MRUItem5=/Game/Maps/mateneeTest
 
 [EditorStartup]
-LastLevel=/Game/Maps/BlockOut
+LastLevel=/Game/Maps/BlockOutExport
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Materials/MasterMaterials/MasterGrass.MasterGrass
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/MatInstances/GrassMatInst
-MRUItem1=/Game/Maps/BlockOut
-MRUItem2=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem3=/Game/Materials/TestMat
-MRUItem4=/Game/Materials/Brickmaster
-MRUItem5=/Game/Maps/BlockOutExport
-MRUItem6=/Game/Anims/protag/a_protag_idle
-MRUItem7=/Game/Anims/protag/m_protag_01_Skeleton_BlendSpace
-MRUItem8=/Game/bonniea_bonnie_runBprotag
-MRUItem9=/Game/Blueprints/Data/Data_Bonnie_hitValues
-MRUItem10=/Game/Blueprints/CharacterBP/bp_baseChar
-MRUItem11=/Game/bonnieabp_bonnieprotag
-MRUItem12=/Game/Anims/Bonnie/bs_Bonnie_idleWalkRun
-MRUItem13=/Game/Maps/CharacterTest
-MRUItem14=/Game/Mesh/Characters/protag/a_protag_runR
-MRUItem15=/Game/Mesh/Characters/protag/m_protag
-MRUItem16=/Game/Mesh/Characters/protag/a_protag_runL
-MRUItem17=/Game/Mesh/Characters/protag/a_protag_runF
-MRUItem18=/Game/Mesh/Characters/protag/m_protag_01
-MRUItem19=/Game/a_protag_runF
+MRUItem0=/Game/Materials/MasterMaterials/MasterGrass
+MRUItem1=/Game/Mesh/GrassMesh
+MRUItem2=/Game/Maps/BlockOutExport
+MRUItem3=/Game/Maps/BlockOut
+MRUItem4=/Game/Materials/MatInstances/GrassMatInst
+MRUItem5=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem6=/Game/Materials/TestMat
+MRUItem7=/Game/Materials/Brickmaster
+MRUItem8=/Game/Anims/protag/a_protag_idle
+MRUItem9=/Game/Anims/protag/m_protag_01_Skeleton_BlendSpace
+MRUItem10=/Game/bonniea_bonnie_runBprotag
+MRUItem11=/Game/Blueprints/Data/Data_Bonnie_hitValues
+MRUItem12=/Game/Blueprints/CharacterBP/bp_baseChar
+MRUItem13=/Game/bonnieabp_bonnieprotag
+MRUItem14=/Game/Anims/Bonnie/bs_Bonnie_idleWalkRun
+MRUItem15=/Game/Maps/CharacterTest
+MRUItem16=/Game/Mesh/Characters/protag/a_protag_runR
+MRUItem17=/Game/Mesh/Characters/protag/m_protag
+MRUItem18=/Game/Mesh/Characters/protag/a_protag_runL
+MRUItem19=/Game/Mesh/Characters/protag/a_protag_runF
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2954,6 +2955,8 @@ REINST_bp_baseChar_C_145.Activation=True
 REINST_bp_baseChar_C_145.Cooking=True
 REINST_bp_baseChar_C_145.Events=True
 FbxImportUI.LodSettings=True
+MaterialExpressionVertexColor.MaterialExpression=True
+MaterialEditorPreviewParameters.ParameterGroups=True
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
@@ -2984,7 +2987,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Materials/MatInstances
+ContentBrowserTab1.SelectedPaths=/Game/Materials/masters
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3021,7 +3024,7 @@ UNR=../../../../../projects/lightb/LightBringerAlpha/Content/Maps
 BRUSH=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBX=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBXAnim=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
-GenericImport=../../../../../projects/lightb/environ/Dome/test/Domeexport_Height.Box_Brush12_StaticMeshSG.png
+GenericImport=../../../../../projects/lightb/environ/GrassMesh.obj
 GenericExport=C:/Users/Chris Justo/Documents/New folder (2)
 GenericOpen=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 GenericSave=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
@@ -3673,8 +3676,8 @@ DistCurveEditor.TimeStamp=2018.10.07-02.07.58
 DistCurveEditor.LastCompileMethod=Unknown
 MeshBuilder.TimeStamp=2019.09.06-02.30.05
 MeshBuilder.LastCompileMethod=External
-StaticMeshEditor.TimeStamp=2018.10.07-02.08.30
-StaticMeshEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2019.09.06-02.30.07
+StaticMeshEditor.LastCompileMethod=External
 AnalyticsBlueprintLibrary.TimeStamp=2019.09.06-02.38.16
 AnalyticsBlueprintLibrary.LastCompileMethod=External
 FileLogging.TimeStamp=2019.09.06-02.38.16
@@ -3958,6 +3961,8 @@ SceneComponent=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.P
 /Game/Materials/masters/TrueTesselation.TrueTesselation=1
 /Game/Materials/masters/MasterMat2.MasterMat2=1
 /Game/Materials/MatInstances/GrassMatInst.GrassMatInst=1
+/Game/Materials/MasterMaterials/MasterGrass.MasterGrass=1
+/Game/Mesh/GrassMesh.GrassMesh=1
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -4073,7 +4078,7 @@ REINST_bp_baseCharacter_C_835="\"Object.Character\" \"Object.Character.Mesh.Obje
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
@@ -4210,6 +4215,8 @@ bp_baseChar_C.Character Movement (General Settings)=True
 SkeletalMesh.LODCustomMode=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Mesh/GrassMesh.GrassMesh;
+RecentlyPlaced=/Game/Materials/MatInstances/MasterGrass_Inst.MasterGrass_Inst;
 RecentlyPlaced=/Game/Materials/MatInstances/MasterMat1_Inst.MasterMat1_Inst;
 RecentlyPlaced=/Game/Materials/BumpOffset_Inst.BumpOffset_Inst;
 RecentlyPlaced=/Game/Materials/Parallax_Inst.Parallax_Inst;
@@ -4228,8 +4235,6 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/Anims/Bonnie/test.test;
-RecentlyPlaced=/Game/Mesh/Characters/Bonnie/m_giantGauntlets.m_giantGauntlets;
-RecentlyPlaced=/Game/Mesh/Characters/Bonnie/m_gauntlets.m_gauntlets;
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -4272,7 +4277,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [MaterialEditor]
-PrimType=1
+PrimType=3
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -4317,6 +4322,7 @@ bSCCUseGlobalSettings=False
 ChangeVariableType_Warning=False
 ExtrudeCoordsWarning=True
 DeleteVariableInUse_Warning=False
+Warning_NoPreviewMeshFound=False
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -4379,7 +4385,7 @@ NormalImportMethod=FBXNIM_ImportNormals
 NormalGenerationMethod=MikkTSpace
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=90.000000)
-ImportUniformScale=1000.000000
+ImportUniformScale=50.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
