--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,35 +104,35 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/BlockOutExport
-MRUItem1=/Game/Maps/BlockOut
+MRUItem0=/Game/Maps/BlockOut
+MRUItem1=/Game/Maps/BlockOutExport
 MRUItem2=/Game/Maps/TempleBlockOut
 MRUItem3=/Game/Maps/CharacterTest
 MRUItem4=/Game/Maps/MainMenu
 MRUItem5=/Game/Maps/mateneeTest
 
 [EditorStartup]
-LastLevel=/Game/Maps/BlockOutExport
+LastLevel=/Game/Maps/BlockOut
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/BlockOutExport
-MRUItem1=/Game/Materials/MasterMaterials/MasterGrass
-MRUItem2=/Game/Materials/MatInstances/MasterGrass_Inst_2
-MRUItem3=/Game/Materials/MatInstances/MasterGrass_Inst_3
-MRUItem4=/Game/Materials/MatInstances/MasterGrass_Inst_4
-MRUItem5=/Game/Materials/MatInstances/MasterGrass_Inst
-MRUItem6=/Game/Mesh/GrassGroupMesh_4
-MRUItem7=/Game/Mesh/GrassGroupMesh_3
-MRUItem8=/Game/Mesh/GrassGroupMesh_2
-MRUItem9=/Game/Mesh/GrassGroupMesh
-MRUItem10=/Game/Mesh/GrassMesh_4
-MRUItem11=/Game/Mesh/GrassMesh_3
-MRUItem12=/Game/Mesh/GrassMesh_2
-MRUItem13=/Game/Mesh/GrassMesh
-MRUItem14=/Game/Maps/BlockOut
+MRUItem0=/Game/Maps/BlockOut
+MRUItem1=/Game/Maps/BlockOutExport
+MRUItem2=/Game/Materials/MasterMaterials/MasterGrass
+MRUItem3=/Game/Materials/MatInstances/MasterGrass_Inst_2
+MRUItem4=/Game/Materials/MatInstances/MasterGrass_Inst_3
+MRUItem5=/Game/Materials/MatInstances/MasterGrass_Inst_4
+MRUItem6=/Game/Materials/MatInstances/MasterGrass_Inst
+MRUItem7=/Game/Mesh/GrassGroupMesh_4
+MRUItem8=/Game/Mesh/GrassGroupMesh_3
+MRUItem9=/Game/Mesh/GrassGroupMesh_2
+MRUItem10=/Game/Mesh/GrassGroupMesh
+MRUItem11=/Game/Mesh/GrassMesh_4
+MRUItem12=/Game/Mesh/GrassMesh_3
+MRUItem13=/Game/Mesh/GrassMesh_2
+MRUItem14=/Game/Mesh/GrassMesh
 MRUItem15=/Game/Materials/Textures/GrassOpacity2
 MRUItem16=/Game/Materials/MatInstances/GrassMatInst
 MRUItem17=/Game/Blueprints/CharacterBP/bp_baseCharacter
