--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,22 +104,22 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/BlockOut
-MRUItem1=/Game/Maps/BlockOutExport
+MRUItem0=/Game/Maps/BlockOutExport
+MRUItem1=/Game/Maps/BlockOut
 MRUItem2=/Game/Maps/TempleBlockOut
 MRUItem3=/Game/Maps/CharacterTest
 MRUItem4=/Game/Maps/MainMenu
 MRUItem5=/Game/Maps/mateneeTest
 
 [EditorStartup]
-LastLevel=/Game/Maps/BlockOut
+LastLevel=/Game/Maps/BlockOutExport
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/BlockOut
-MRUItem1=/Game/Maps/BlockOutExport
+MRUItem0=/Game/Maps/BlockOutExport
+MRUItem1=/Game/Maps/BlockOut
 MRUItem2=/Game/Materials/MasterMaterials/MasterGrass
 MRUItem3=/Game/Materials/MatInstances/MasterGrass_Inst_2
 MRUItem4=/Game/Materials/MatInstances/MasterGrass_Inst_3
@@ -3001,7 +3001,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Materials/MatInstances
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3038,7 +3038,7 @@ UNR=../../../../../projects/lightb/LightBringerAlpha/Content/Maps
 BRUSH=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBX=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBXAnim=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
-GenericImport=../../../../../projects/lightb/environ/GrassGroupMesh.obj
+GenericImport=../../../../../projects/lightb/environ/building1.obj
 GenericExport=C:/Users/Chris Justo/Documents/New folder (2)
 GenericOpen=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 GenericSave=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
@@ -4204,6 +4204,7 @@ REINST_bp_baseEnemy_C_102="\"Object.Character\" \"Object.Character.Mesh.Object.R
 REINST_bp_baseChar_C_101="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_baseChar_C_145="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[2].Parameters.Parameters[0].Object.ParameterValue\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -4244,9 +4245,10 @@ bp_baseChar_C.Character Movement (General Settings)=True
 SkeletalMesh.LODCustomMode=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/MatInstances/MasterMat1_Inst.MasterMat1_Inst;
+RecentlyPlaced=/Game/Meshes/building1.building1;
 RecentlyPlaced=/Game/Mesh/GrassMesh.GrassMesh;
 RecentlyPlaced=/Game/Materials/MatInstances/MasterGrass_Inst.MasterGrass_Inst;
-RecentlyPlaced=/Game/Materials/MatInstances/MasterMat1_Inst.MasterMat1_Inst;
 RecentlyPlaced=/Game/Materials/BumpOffset_Inst.BumpOffset_Inst;
 RecentlyPlaced=/Game/Materials/Parallax_Inst.Parallax_Inst;
 RecentlyPlaced=/Game/Materials/TestMat.TestMat;
@@ -4263,7 +4265,6 @@ RecentlyPlaced=/Game/Blueprints/CharacterBP/bp_baseChar.bp_baseChar;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Game/Anims/Bonnie/test.test;
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -4414,7 +4415,7 @@ NormalImportMethod=FBXNIM_ImportNormals
 NormalGenerationMethod=MikkTSpace
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=90.000000)
-ImportUniformScale=50.000000
+ImportUniformScale=1000.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
